@@ -2490,8 +2490,8 @@ instr_p2[] = {
 
     { "incmod", 0x07000000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD },
     { "decmod", 0x07200000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD },
-    { "zerox",  0x07400000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD },
-    { "signx",  0x07600000, TWO_OPERANDS, OPC_GENERIC, FLAG_P2_STD },
+    { "zerox",  0x07400000, TWO_OPERANDS, OPC_ZEROX, FLAG_P2_STD },
+    { "signx",  0x07600000, TWO_OPERANDS, OPC_SIGNX, FLAG_P2_STD },
 
     { "encod",  0x07800000, TWO_OPERANDS_OPTIONAL, OPC_ENCOD, FLAG_P2_STD },
     { "ones",   0x07a00000, TWO_OPERANDS_OPTIONAL, OPC_GENERIC, FLAG_P2_STD },
