@@ -92,7 +92,9 @@ typedef enum IROpcode {
     OPC_JMPREL,
     OPC_NOT,
     OPC_QFRAC,
+    OPC_SIGNX,
     OPC_WAITX,
+    OPC_ZEROX,
     OPC_REPEAT,
     OPC_REPEAT_END,  // dummy instruction to mark end of repeat loop
     
